@startuml Tablero

class Tablero{
    +Tablero(mapa: Mapa)
    +obtenerCasillero(posicion: Posicion): Casillero
    +calcularPosicion(valor: valorAzar): Posicion
    +posicionInicial(): Posicion
    +posicionFinal(): Posicion
    +posicionMedio(): Posicion
}


interface Mapa{
    +{abstract}obtenerCasillero(posicion: Posicion): Casillero
    +{abstract}calcularPosicion(valor: valorAzar): Posicion
    +{abstract}obtenerPosicionInicial(): Posicion
    +{abstract}obtenerPosicionFinal(): Posicion
    +{abstract}obtenerPosicionDelMedio(): Posicion
}


class MapaLineal{
    -casilleros: Map<Posicion, Casillero> casilleros
    -posicionFinal: Posicion
    -constructorMapa: ConstructorMapa
    +MapaLineal(informacionMapa: InformacionMapa)
    +obtenerCasillero(posicion Posicion): Casillero
    +calcularPosicion(valor: ValorAzar): PosicionLineal
    +obtenerPosicionInicial(): Posicion
    +obtenerPosicionFinal(): Posicion
    +obtenerPosicionDelMedio(): Posicion
}


Tablero --> Mapa

Mapa <|-- MapaLineal

@enduml